# snippet

./: .gitignore
boost_python/: .clang-format  CMakeLists.txt
boost_python/src/export/: 01_function.cpp  02_scope.cpp  03_enum.cpp  04_struct.cpp  05_default_constructor.cpp  06_custom_constructor.cpp  07_member.cpp  08_property.cpp  09_inheritance.cpp  10_virtual_function.cpp  11_pure_virtual_function.cpp  12_operators.cpp  13_overload.cpp  14_default_parameter_of_class.cpp  15_func_default_parameter.cpp  16_smart_pointer.cpp  17_func_ret_ref.cpp  18_func_ret_static.cpp  19_func_ret_new_obj.cpp
